--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy --only hosting:tax-calculator-project"
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "classnames": "^2.3.2",
+    "firebase": "^10.10.0",
     "lodash-es": "^4.17.21",
     "next": "^13.4.5",
+    "nvm": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
