mobile케이스 작업

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,13 @@
 {
   "hosting": {
     "site": "tax-calculator-project",
-    "public": "public",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "public": "out",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
